--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "firebase": "^4.1.3",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
