--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.5.7",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
